--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,5 +27,11 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Add android sdk location
+        run: |
+          mkdir android
+          mkdir android/sdk
+          export ANDROID_SDK_ROOT=./android/sdk
+      
       - name: Assemble
         run: gradle assemble
