--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Add android sdk location
         run: |
-          mkdir android
-          mkdir android/sdk
-          export ANDROID_SDK_ROOT=./android/sdk
+          mkdir -p $HOME/libs/android/sdk
+          export ANDROID_SDK_ROOT=$HOME/libs/android/sdk
       
       - name: Assemble
         run: gradle assemble
