--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           mkdir -p $HOME/libs/android/sdk
           export ANDROID_SDK_ROOT=$HOME/libs/android/sdk
-      
+          echo $ANDROID_SDK_ROOT
+          
       - name: Assemble
         run: gradle assemble
