--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,5 +33,8 @@ jobs:
           export ANDROID_SDK_ROOT=$HOME/libs/android/sdk
           echo $ANDROID_SDK_ROOT
           
+      - name: Test android sdk location
+        run: echo $ANDROID_SDK_ROOT
+          
       - name: Assemble
         run: gradle assemble
