--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,14 +27,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Add android sdk location
+      - name: Assemble
         run: |
           mkdir -p $HOME/libs/android/sdk
           export ANDROID_SDK_ROOT=$HOME/libs/android/sdk
-          echo $ANDROID_SDK_ROOT
-          
-      - name: Test android sdk location
-        run: echo $ANDROID_SDK_ROOT
-          
-      - name: Assemble
-        run: gradle assemble
+          gradle assemble
