--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,10 +34,8 @@ jobs:
           echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
           gradle assemble
           
-      - name: Tree
-        run: |
-          apt install tree
-          tree
+      - name: List
+        run: ls -lA
           
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
