--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:enabled="true"
             android:exported="true"
             android:label="CallBlock"
-            android:icon="@drawable/call_block"
+            android:icon="@drawable/ic_callblock"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action
