--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yuraiz.callblock">
+    package="com.yuraiz.calligator">
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -9,13 +9,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CallBlock">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.Calligator"
+        android:fullBackupContent="@xml/backup_descriptor"
+        android:allowBackup="true">
+        <activity android:name="com.yuraiz.calligator.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,18 +38,18 @@
         </activity>
 
         <service
-            android:name="com.yuraiz.callblock.CallBlocker"
+            android:name="com.yuraiz.calligator.CallBlocker"
             android:permission="android.permission.BIND_SCREENING_SERVICE">
             <intent-filter>
                 <action android:name="android.telecom.CallScreeningService" />
             </intent-filter>
         </service>
         <service
-            android:name=".CBTileService"
+            android:name="com.yuraiz.calligator.CBTileService"
             android:enabled="true"
             android:exported="true"
-            android:label="CallBlock"
-            android:icon="@drawable/ic_callblock"
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_calligator"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action
