--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId 'com.yuraiz.calligator'
         minSdkVersion 29
         targetSdkVersion 31
-        versionCode 5
-        versionName "1.3"
+        versionCode 6
+        versionName '1.4'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
